--- a/index.html
+++ b/index.html
@@ -26,5 +26,11 @@
         <div id="sq7"></div>
         <div id="sq8"></div>
     </section>    
+
+    <button id="reset">Play Again</button>
+
+    <!-- <div>
+        Section for Player/Draw/Comp totals
+    </div> -->
 </body>
 </html>
