--- a/index.html
+++ b/index.html
@@ -12,25 +12,29 @@
 
 </head>
 <body>
-    <h1>Tic-Tac-Toe</h1>
-    <h2 id="message">Message</h2>
+    <article>
+        <header>
+            <h1>Tic-Tac-Toe</h1>
+            <h2 id="message">Message</h2>
+        </header>
+        
+        <section class="board">
+            <div id="sq0" class="innerBoard"></div>
+            <div id="sq1" class="innerBoard"></div>
+            <div id="sq2" class="innerBoard"></div>
+            <div id="sq3" class="innerBoard"></div>
+            <div id="sq4" class="innerBoard"></div>
+            <div id="sq5" class="innerBoard"></div>
+            <div id="sq6" class="innerBoard"></div>
+            <div id="sq7" class="innerBoard"></div>
+            <div id="sq8" class="innerBoard"></div>
+        </section>    
+        <div><button id="reset" class="btn btn-success">Play Again</button></div>
+        
 
-    <section class="board">
-        <div id="sq0"></div>
-        <div id="sq1"></div>
-        <div id="sq2"></div>
-        <div id="sq3"></div>
-        <div id="sq4"></div>
-        <div id="sq5"></div>
-        <div id="sq6"></div>
-        <div id="sq7"></div>
-        <div id="sq8"></div>
-    </section>    
-
-    <button id="reset">Play Again</button>
-
-    <!-- <div>
-        Section for Player/Draw/Comp totals
-    </div> -->
+        <!-- <div id="totals">
+            Section for Player/Draw/Comp totals
+        </div> -->
+    </article>
 </body>
 </html>
