Finish isWinner, render, and handleClick funtions

--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
         <h3 id="gameStatus"></h3>
         <!-- <input type="text" > -->
 
-        <section>
+        <!-- <section>
             <input type="text" name="" id="Player_X" placeholder="X-Name">
             <input type="text" name="" id="Player_O" placeholder="O-Name">
-        </section>
+        </section> -->
         <section class="board" id="mainBoard">
             <div id="sq0" class="innerBoard"></div>
             <div id="sq1" class="innerBoard"></div>
