Finishing design touches. Still not functional.

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 <body>
     
         <header>
-            <h1>Tic-Tac-Toe</h1>
+            <h1 class="animate__animated animate__bounce" >Tic-Tac-Toe</h1>
             <h2 id="message"></h2>
         </header>
-            <h3 id="gameStatus"></h3>
+            <h3 id="gameStatus" class="animate__bounceIn"></h3>
 
         <section class="board" id="mainBoard">
             <div id="sq0"></div>
@@ -31,7 +31,7 @@
             <div id="sq7"></div>
             <div id="sq8"></div>
         </section>    
-<section><button id="reset">Play Again</button></section>        
+<section><button id="reset" onclick="window.location.reload">Play Again</button></section>        
         
 
         <!-- <section class="id="totals">
