Add sound. Broke everything somewhere

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="sq7"></div>
             <div id="sq8"></div>
         </section>    
-<section><button id="reset" onclick="window.location.reload">Play Again</button></section>        
+<section><button id="reset">Play Again</button></section>        
         
 
         <!-- <section class="id="totals">
