--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
             <div id="sq7"></div>
             <div id="sq8"></div>
         </section>    
-<section><button id="reset">Play Again</button></section>        
+<section><button id="reset" onClick="window.location.href=window.location.href">Play Again</button></section>        
         
 
         <!-- <section class="id="totals">
